tests/valid/definite/Define_Valid_3.whiley
// this is a comment!
define { 1,3,5 } as odd

void System::main([string] args):
    odd y
    y = 1
    print str(y)
